--- a/index.html
+++ b/index.html
@@ -139,18 +139,78 @@
         <li>Growth-focused and detail-oriented mindset</li>
       </ul>
     </div>
-  </section>  <!-- SERVICES -->  <section id="services">
-    <h2>My Services</h2>
-    <div class="card">
-      <ul>
-        <li>Discord Server Setup & Full Management</li>
-        <li>YouTube Channel Management</li>
-        <li>Instagram Page Management</li>
-        <li>Community Moderation</li>
-        <li>Content Coordination & Growth Support</li>
-      </ul>
-    </div>
-  </section>  <!-- CONTACT -->  <section id="contact">
+  </section><!-- SERVICES -->
+
+  <section id="services">
+  <h2>My Services</h2>
+  <p style="color:#9ca3af; margin-bottom:2rem;">Comprehensive Discord community management solutions</p>  <div class="services-grid"><div class="card">
+  <h3>Community Setup</h3>
+  <p>Complete Discord server setup with channels, roles, and permissions</p>
+  <ul>
+    <li>Server structure design</li>
+    <li>Role hierarchy setup</li>
+    <li>Channel organization</li>
+    <li>Bot integration</li>
+  </ul>
+</div>
+
+<div class="card">
+  <h3>Moderation</h3>
+  <p>24/7 community moderation and safety management</p>
+  <ul>
+    <li>Active monitoring</li>
+    <li>Rule enforcement</li>
+    <li>Conflict resolution</li>
+    <li>Anti-spam protection</li>
+  </ul>
+</div>
+
+<div class="card">
+  <h3>Growth Strategy</h3>
+  <p>Proven strategies to grow and engage your community</p>
+  <ul>
+    <li>Engagement campaigns</li>
+    <li>Event planning</li>
+    <li>Content strategy</li>
+    <li>Partnership building</li>
+  </ul>
+</div>
+
+<div class="card">
+  <h3>Community Engagement</h3>
+  <p>Keep your community active and engaged daily</p>
+  <ul>
+    <li>Daily interactions</li>
+    <li>Community events</li>
+    <li>Member recognition</li>
+    <li>Feedback collection</li>
+  </ul>
+</div>
+
+<div class="card">
+  <h3>Bot Management</h3>
+  <p>Custom bot setup and management for enhanced functionality</p>
+  <ul>
+    <li>Bot configuration</li>
+    <li>Custom commands</li>
+    <li>Automation setup</li>
+    <li>Performance monitoring</li>
+  </ul>
+</div>
+
+<div class="card">
+  <h3>Consulting</h3>
+  <p>Expert advice on community building and management</p>
+  <ul>
+    <li>Strategy consultation</li>
+    <li>Problem solving</li>
+    <li>Best practices</li>
+    <li>Growth planning</li>
+  </ul>
+</div>
+
+  </div>
+</section>  <!-- CONTACT -->  <section id="contact">
     <h2>Contact Me</h2>
     <div class="card">
       <p>Let’s work together and grow your community.</p>
