--- a/index.html
+++ b/index.html
@@ -1,246 +1,199 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Power | Portfolio</title>
-  <!-- SEO -->
-  <meta name="description" content="Power – Discord, YouTube, and Instagram Manager helping creators grow." />
+  <title>Power | Discord Community Manager</title>
+  <meta name="description" content="Power – Expert in managing and growing Discord communities with professional strategies." />
   <meta name="author" content="Power" />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-    }body {
-  background: linear-gradient(135deg, #020617, #0f172a);
-  color: #e5e7eb;
-  line-height: 1.7;
-}
+    html { scroll-behavior: smooth; }
+    * { margin:0; padding:0; box-sizing:border-box; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; }
 
-header {
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 2rem;
-}
+    body {
+      background: linear-gradient(135deg, #1b0b28, #3a005f);
+      color: #f0e5ff;
+      line-height:1.7;
+    }
 
-header h1 {
-  font-size: 3rem;
-  margin-bottom: 1rem;
-}
+    /* NAVBAR */
+    nav {
+      position: sticky;
+      top: 0;
+      background: rgba(20, 0, 50, 0.9);
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      z-index: 1000;
+      box-shadow: 0 0 15px #ff00ff88;
+    }
+    nav .logo { font-weight: bold; font-size: 1.5rem; color: #ff00ff; text-shadow: 0 0 10px #ff00ff; }
+    nav ul { display: flex; list-style:none; gap: 1.5rem; }
+    nav ul li a { color: #e0caff; text-decoration: none; font-weight: 500; transition: 0.3s; text-shadow: 0 0 5px #ff00ff88; }
+    nav ul li a:hover { color: #ff77ff; text-shadow: 0 0 12px #ff77ff; }
 
-header span {
-  color: #38bdf8;
-}
+    header { min-height:90vh; display:flex; align-items:center; justify-content:center; text-align:center; padding:2rem; }
+    header h1 { font-size:3rem; margin-bottom:1rem; text-shadow: 0 0 15px #ff00ff; }
+    header span { color:#ff77ff; text-shadow: 0 0 20px #ff77ff; }
+    header p { max-width:600px; margin:auto; color:#d8baff; font-size:1.1rem; }
 
-header p {
-  max-width: 600px;
-  margin: auto;
-  color: #9ca3af;
-  font-size: 1.1rem;
-}
+    section { max-width:1000px; margin:auto; padding:4rem 2rem; }
+    h2 { font-size:2.2rem; margin-bottom:1.5rem; color:#ff00ff; text-align:center; text-shadow: 0 0 10px #ff00ff; }
+    .card {
+      background: rgba(50,0,80,0.9);
+      padding:2rem;
+      border-radius:18px;
+      box-shadow: 0 0 20px #ff00ffaa;
+      margin-bottom:2rem;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+    .card:hover { transform: translateY(-5px); box-shadow: 0 0 40px #ff77ff; }
+    ul { list-style:none; }
+    li { padding:0.8rem 0; border-bottom:1px solid #6a007f55; color:#e0caff; }
+    li:last-child { border-bottom:none; }
 
-section {
-  max-width: 1000px;
-  margin: auto;
-  padding: 4rem 2rem;
-}
+    .buttons a { display:inline-block; margin:1rem 0.5rem 0 0; padding:0.8rem 1.6rem; background:#ff00ff; color:#1b0b28; text-decoration:none; font-weight:600; border-radius:999px; transition: transform 0.2s ease, box-shadow 0.2s ease; box-shadow: 0 0 10px #ff00ffaa; }
+    .buttons a.secondary { background:transparent; color:#ff77ff; border:2px solid #ff77ff; text-shadow: 0 0 5px #ff77ff; }
+    .buttons a:hover { transform:translateY(-2px); box-shadow:0 0 25px #ff77ff; }
 
-h2 {
-  font-size: 2.2rem;
-  margin-bottom: 1.5rem;
-  color: #38bdf8;
-}
+    footer { text-align:center; padding:2rem; color:#d8baff; font-size:0.9rem; text-shadow: 0 0 5px #ff77ff; }
 
-.card {
-  background: #111827;
-  padding: 2rem;
-  border-radius: 18px;
-  box-shadow: 0 20px 40px rgba(0,0,0,0.35);
-}
+    @media(max-width:600px){
+      header h1{font-size:2.2rem;}
+      h2{font-size:1.8rem;}
+      nav ul {flex-direction: column; gap: 1rem;}
+    }
 
-ul {
-  list-style: none;
-}
-
-li {
-  padding: 0.8rem 0;
-  border-bottom: 1px solid #1f2937;
-  color: #d1d5db;
-}
-
-li:last-child {
-  border-bottom: none;
-}
-
-.buttons a {
-  display: inline-block;
-  margin: 1rem 0.5rem 0 0;
-  padding: 0.8rem 1.6rem;
-  background: #38bdf8;
-  color: #020617;
-  text-decoration: none;
-  font-weight: 600;
-  border-radius: 999px;
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-
-.buttons a.secondary {
-  background: transparent;
-  color: #38bdf8;
-  border: 2px solid #38bdf8;
-}
-
-.buttons a:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 12px 30px rgba(56,189,248,0.4);
-}
-
-footer {
-  text-align: center;
-  padding: 2rem;
-  color: #9ca3af;
-  font-size: 0.9rem;
-}
-
-@media (max-width: 600px) {
-  header h1 { font-size: 2.2rem; }
-  h2 { font-size: 1.8rem; }
-}
-
-/* SERVICES GRID CSS */
-.services-grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 2rem;
-}
-
-@media (max-width: 1024px) {
-  .services-grid {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media (max-width: 600px) {
-  .services-grid {
-    grid-template-columns: 1fr;
-  }
-}
-
+    /* GRID STYLES */
+    .services-grid, .communities-grid{display:grid; grid-template-columns:repeat(3,1fr); gap:2rem;}
+    @media(max-width:1024px){.services-grid,.communities-grid{grid-template-columns:repeat(2,1fr);}}
+    @media(max-width:600px){.services-grid,.communities-grid{grid-template-columns:1fr;}}
   </style>
 </head>
 <body>
+
+  <!-- NAVBAR -->
+  <nav>
+    <div class="logo">Power</div>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#communities">Communities</a></li>
+      <li><a href="#services">Services</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
   <!-- HERO -->
   <header>
     <div>
-      <h1>Hey, I'm <span>Power</span></h1>
-      <p>
-        I help creators and communities grow by managing Discord servers, YouTube channels, and Instagram pages professionally.
-      </p>
+      <h1>Hello, I'm <span>Power</span></h1>
+      <p>I help creators and communities thrive by building, managing, and growing professional Discord spaces that stay active and welcoming.</p>
       <div class="buttons">
-        <a href="#contact">Contact Me</a>
-        <a href="#services" class="secondary">My Services</a>
+        <a href="#contact">Get in Touch</a>
+        <a href="#services" class="secondary">See My Services</a>
       </div>
     </div>
-  </header>  <!-- ABOUT -->  <section id="about">
+  </header>
+
+  <!-- ABOUT -->
+  <section id="about">
     <h2>About Me</h2>
     <div class="card">
-      <p>I'm Power, a dedicated digital manager focused on building clean, organized, and engaging online spaces. I work closely with creators to ensure their communities stay active, their content stays consistent, and their brand keeps growing.</p>
+      <p>I'm Power, a committed community manager with a passion for turning Discord servers into vibrant, well-organized spaces. I focus on creating engaging experiences for members while supporting creators in building sustainable online communities.</p>
     </div>
-  </section>  <!-- SKILLS -->  <section id="skills">
-    <h2>My Skills</h2>
-    <div class="card">
-      <ul>
-        <li>Professional Discord server management & moderation</li>
-        <li>Content planning and scheduling for creators</li>
-        <li>Audience engagement and community growth</li>
-        <li>Reliable communication and fast response</li>
-        <li>Growth-focused and detail-oriented mindset</li>
-      </ul>
+  </section>
+
+  <!-- COMMUNITIES -->
+  <section id="communities">
+    <h2>Communities I Manage</h2>
+    <div class="communities-grid">
+      <div class="card">
+        <h3>Demon™ HQ</h3>
+        <p>A dedicated support hub for the Demon™ bot, helping users and developers collaborate effectively.</p>
+        <p>Discord Bot • 1K+ Members</p>
+      </div>
+      <div class="card">
+        <h3>Senpai Spider</h3>
+        <p>A lively Minecraft community surrounding the popular YouTuber, with active discussions and events.</p>
+        <p>Gaming • 290K+ Members</p>
+      </div>
+      <div class="card">
+        <h3>ArtifyStudio</h3>
+        <p>A creative space for digital artists, designers, and enthusiasts to share their work and collaborate.</p>
+        <p>Art & Design • 1.2K+ Members</p>
+      </div>
     </div>
-  </section>  <!-- SERVICES -->  <section id="services">
+  </section>
+
+  <!-- SERVICES -->
+  <section id="services">
     <h2>My Services</h2>
-    <p style="color:#9ca3af; margin-bottom:2rem;">Comprehensive Discord community management solutions</p>
+    <p style="color:#d8baff; text-align:center; margin-bottom:2rem;">Complete Discord management solutions for creators and communities</p>
     <div class="services-grid">
       <div class="card">
         <h3>Community Setup</h3>
-        <p>Complete Discord server setup with channels, roles, and permissions</p>
         <ul>
-          <li>Server structure design</li>
-          <li>Role hierarchy setup</li>
-          <li>Channel organization</li>
-          <li>Bot integration</li>
+          <li>Design server structure & channels</li>
+          <li>Role creation & hierarchy management</li>
+          <li>Bot integration and configuration</li>
+          <li>Optimized permissions & access control</li>
         </ul>
-      </div><div class="card">
-    <h3>Moderation</h3>
-    <p>24/7 community moderation and safety management</p>
-    <ul>
-      <li>Active monitoring</li>
-      <li>Rule enforcement</li>
-      <li>Conflict resolution</li>
-      <li>Anti-spam protection</li>
-    </ul>
-  </div>
+      </div>
+      <div class="card">
+        <h3>Moderation</h3>
+        <ul>
+          <li>24/7 server monitoring</li>
+          <li>Rule enforcement & conflict resolution</li>
+          <li>Anti-spam & security management</li>
+          <li>Member support & guidance</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>Growth Strategy</h3>
+        <ul>
+          <li>Community engagement campaigns</li>
+          <li>Event planning & execution</li>
+          <li>Content planning & scheduling</li>
+          <li>Collaboration & partnerships</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>Community Engagement</h3>
+        <ul>
+          <li>Daily interactions with members</li>
+          <li>Organizing fun and interactive events</li>
+          <li>Highlighting top contributors</li>
+          <li>Collecting feedback for improvements</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>Consulting</h3>
+        <ul>
+          <li>Expert advice for growing communities</li>
+          <li>Problem solving & optimization</li>
+          <li>Best practices & server strategy</li>
+          <li>Long-term growth planning</li>
+        </ul>
+      </div>
+    </div>
+  </section>
 
-  <div class="card">
-    <h3>Growth Strategy</h3>
-    <p>Proven strategies to grow and engage your community</p>
-    <ul>
-      <li>Engagement campaigns</li>
-      <li>Event planning</li>
-      <li>Content strategy</li>
-      <li>Partnership building</li>
-    </ul>
-  </div>
-
-  <div class="card">
-    <h3>Community Engagement</h3>
-    <p>Keep your community active and engaged daily</p>
-    <ul>
-      <li>Daily interactions</li>
-      <li>Community events</li>
-      <li>Member recognition</li>
-      <li>Feedback collection</li>
-    </ul>
-  </div>
-
-  <div class="card">
-    <h3>Bot Management</h3>
-    <p>Custom bot setup and management for enhanced functionality</p>
-    <ul>
-      <li>Bot configuration</li>
-      <li>Custom commands</li>
-      <li>Automation setup</li>
-      <li>Performance monitoring</li>
-    </ul>
-  </div>
-
-  <div class="card">
-    <h3>Consulting</h3>
-    <p>Expert advice on community building and management</p>
-    <ul>
-      <li>Strategy consultation</li>
-      <li>Problem solving</li>
-      <li>Best practices</li>
-      <li>Growth planning</li>
-    </ul>
-  </div>
-</div>
-
-  </section>  <!-- CONTACT -->  <section id="contact">
+  <!-- CONTACT -->
+  <section id="contact">
     <h2>Contact Me</h2>
     <div class="card">
-      <p>Let’s work together and grow your community.</p>
+      <p>Let’s collaborate to build a thriving and organized Discord community. Reach out and we’ll make it happen.</p>
       <div class="buttons">
-        <a href="mailto:your@email.com">Email Me</a>
+        <a href="mailto:power@email.com">Email Me</a>
         <a href="https://discord.com" class="secondary">Discord</a>
       </div>
     </div>
-  </section>  <footer>
+  </section>
+
+  <footer>
     © 2026 Power. All rights reserved.
   </footer>
+
 </body>
 </html>
