--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     * { margin:0; padding:0; box-sizing:border-box; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; }
 
     body {
-      background: linear-gradient(135deg,#0d0015,#2b001f);
-      color: #f0e5ff;
+      background: linear-gradient(135deg,#000000,#1a1a1a);
+      color: #e5e5e5;
       line-height:1.7;
     }
 
@@ -20,54 +20,68 @@
     nav {
       position: sticky;
       top: 0;
-      background: rgba(20, 0, 30, 0.95);
+      background: rgba(0, 0, 0, 0.95);
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 1rem 2rem;
       z-index: 1000;
-      box-shadow: 0 0 5px #80008055;
+      box-shadow: 0 0 5px #00000055;
     }
-    nav .logo { font-weight: bold; font-size: 1.5rem; color: #800080; }
+    nav .logo { font-weight: bold; font-size: 1.5rem; color: #ffffff; }
     nav ul { display: flex; list-style:none; gap: 1.5rem; }
-    nav ul li a { color: #f0e5ff; text-decoration: none; font-weight: 500; transition: 0.3s; }
-    nav ul li a:hover { color: #ff4444; }
+    nav ul li a { color: #e5e5e5; text-decoration: none; font-weight: 500; transition: 0.3s; }
+    nav ul li a:hover { color: #ffffff; }
+
+    /* Hide navbar on mobile */
+    @media(max-width:768px) {
+      nav { display: none; }
+    }
 
     /* HERO */
-    header { min-height:90vh; display:flex; flex-direction:column; align-items:center; justify-content:center; text-align:center; padding:2rem; }
-    header img { width:150px; height:150px; border-radius:50%; margin-bottom:1rem; object-fit:cover; border: 3px solid #800080; }
-    header h1 { font-size:3rem; margin-bottom:1rem; color:#ff4444; }
-    header span { color:#800080; }
-    header p { max-width:600px; margin:auto; color:#d8baff; font-size:1.1rem; }
+    header {
+      min-height:70vh; /* Reduced height for smaller spacing */
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      justify-content:center;
+      text-align:center;
+      padding:1.5rem 2rem;
+    }
+    header img { width:150px; height:150px; border-radius:50%; margin-bottom:1rem; object-fit:cover; border: 3px solid #ffffff; }
+    header h1 { font-size:3rem; margin-bottom:0.8rem; color:#ffffff; }
+    header span { color:#cccccc; }
+    header p { max-width:600px; margin:auto; color:#aaaaaa; font-size:1.1rem; }
 
-    section { max-width:1000px; margin:auto; padding:4rem 2rem; }
-    h2 { font-size:2.2rem; margin-bottom:1.5rem; color:#800080; text-align:center; }
+    section { max-width:1000px; margin:auto; padding:2rem 2rem; } /* Reduced padding between sections */
+    h2 { font-size:2.2rem; margin-bottom:1rem; color:#ffffff; text-align:center; }
     .card {
-      background: rgba(50,0,50,0.85);
-      padding:2rem;
+      background: rgba(30,30,30,0.95);
+      padding:1.5rem; /* Reduced padding inside cards */
       border-radius:18px;
-      box-shadow: 0 0 10px #80008055;
-      margin-bottom:2rem;
+      box-shadow: 0 0 5px #00000055;
+      margin-bottom:1.5rem; /* Reduced spacing between cards */
       transition: transform 0.3s, box-shadow 0.3s;
     }
-    .card:hover { transform: translateY(-5px); box-shadow: 0 0 20px #ff444455; }
+    .card:hover { transform: translateY(-5px); box-shadow: 0 0 10px #55555555; }
     ul { list-style:none; }
-    li { padding:0.8rem 0; border-bottom:1px solid #55005555; color:#d8baff; }
+    li { padding:0.6rem 0; border-bottom:1px solid #44444455; color:#cccccc; }
     li:last-child { border-bottom:none; }
 
-    .buttons a { display:inline-block; margin:1rem 0.5rem 0 0; padding:0.8rem 1.6rem; background:#800080; color:#1b0b28; text-decoration:none; font-weight:600; border-radius:999px; transition: transform 0.2s ease, box-shadow 0.2s ease; box-shadow: 0 0 5px #80008055; }
-    .buttons a.secondary { background:transparent; color:#ff4444; border:2px solid #ff4444; }
-    .buttons a:hover { transform:translateY(-2px); box-shadow:0 0 10px #ff444455; }
+    .buttons a { display:inline-block; margin:0.8rem 0.5rem 0 0; padding:0.7rem 1.4rem; background:#222222; color:#ffffff; text-decoration:none; font-weight:600; border-radius:999px; transition: transform 0.2s ease, box-shadow 0.2s ease; box-shadow: 0 0 3px #00000055; }
+    .buttons a.secondary { background:transparent; color:#ffffff; border:2px solid #ffffff; }
+    .buttons a:hover { transform:translateY(-2px); box-shadow:0 0 6px #88888855; }
 
-    footer { text-align:center; padding:2rem; color:#d8baff; font-size:0.9rem; }
+    footer { text-align:center; padding:1.5rem; color:#aaaaaa; font-size:0.9rem; }
 
     @media(max-width:600px){
       header h1{font-size:2.2rem;}
       h2{font-size:1.8rem;}
       nav ul {flex-direction: column; gap: 1rem;}
+      section {padding:2rem 1rem;} /* Keep mobile spacing readable */
     }
 
-    .services-grid{display:grid; grid-template-columns:repeat(3,1fr); gap:2rem;}
+    .services-grid{display:grid; grid-template-columns:repeat(3,1fr); gap:1.5rem;}
     @media(max-width:1024px){.services-grid{grid-template-columns:repeat(2,1fr);}}
     @media(max-width:600px){.services-grid{grid-template-columns:1fr;}}
   </style>
@@ -87,7 +101,7 @@
 
   <!-- HERO -->
   <header>
-    <img src="your-image.jpg" alt="Power's Profile Image">
+    <img src="https://cdn.discordapp.com/attachments/1405788974198296629/1466858220059361503/ca75ca1ab8d338ed603861f05833fa10.jpg?ex=697e45ac&is=697cf42c&hm=9e6b8294bdbf27f08917228ded876af4472d4813e090dbd6141e2deb9f21793f&" alt="Power's Profile Image">
     <h1>Hello, I'm <span>Power</span></h1>
     <p>I help creators and communities thrive by building, managing, and growing professional Discord spaces that stay active and welcoming.</p>
     <div class="buttons">
@@ -100,7 +114,7 @@
   <section id="about">
     <h2>About Me</h2>
     <div class="card">
-      <p>I'm Power, a committed community manager focused on creating organized and engaging Discord servers. My goal is to help creators grow their communities while maintaining an active, safe, and enjoyable space for members.</p>
+      <p>I'm Power, a dedicated community manager focused on creating organized and engaging Discord servers. I help creators grow communities while keeping spaces active, safe, and fun.</p>
     </div>
   </section>
 
@@ -110,17 +124,17 @@
     <div class="services-grid">
       <div class="card">
         <h3>BasuPlays</h3>
-        <p>A Minecraft community for the YouTuber BasuPlays. Active discussions and events keep the members engaged.</p>
+        <p>A Minecraft community for the YouTuber BasuPlays with active discussions and events.</p>
         <p>Members: 30k+</p>
       </div>
       <div class="card">
         <h3>Venxion</h3>
-        <p>A small YouTuber’s community with a focus on gaming, streaming, and collaboration. Great for tight-knit interactions.</p>
+        <p>A small YouTuber’s community focused on gaming and collaboration with a tight-knit atmosphere.</p>
         <p>Members: 11k+</p>
       </div>
       <div class="card">
         <h3>DcWolfPlayz</h3>
-        <p>A big YouTuber with 30k+ subscribers. The server has an active, fun, and organized community.</p>
+        <p>A big YouTuber with 30k+ subscribers. The server is active, fun, and well-organized.</p>
         <p>Members: 3k+</p>
       </div>
     </div>
@@ -129,7 +143,7 @@
   <!-- SERVICES -->
   <section id="services">
     <h2>My Services</h2>
-    <p style="color:#d8baff; text-align:center; margin-bottom:2rem;">Complete Discord management solutions for creators and communities</p>
+    <p style="color:#cccccc; text-align:center; margin-bottom:1.5rem;">Complete Discord management solutions for creators and communities</p>
     <div class="services-grid">
       <div class="card">
         <h3>Community Setup</h3>
