--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </nav>
 
 <header>
-  <img src="https://cdn.discordapp.com/attachments/1405788974198296629/1466858220059361503/ca75ca1ab8d338ed603861f05833fa10.jpg">
+  <img src="https://cdn.discordapp.com/attachments/1405788974198296629/1466858220059361503/ca75ca1ab8d338ed603861f05833fa10.jpg?ex=697e45ac&is=697cf42c&hm=9e6b8294bdbf27f08917228ded876af4472d4813e090dbd6141e2deb9f21793f&">
   <h1>Hello, I'm <span>Power</span></h1>
   <p>Professional Discord Community Manager with over 3 years of experience.</p>
 </header>
