--- a/index.html
+++ b/index.html
@@ -1,239 +1,305 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Power | Discord Community Manager</title>
-  <meta name="description" content="Power – Professional Discord community manager." />
-  <meta name="author" content="Power" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Power | Community Manager</title>
 
-  <style>
-    html { scroll-behavior: smooth; }
-    * { margin:0; padding:0; box-sizing:border-box; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif; }
+<meta name="description" content="Power – Professional Discord Community Manager with 3+ years experience.">
+<meta name="author" content="Power">
 
-    body {
-      background: linear-gradient(135deg,#000000,#1a1a1a);
-      color: #e5e5e5;
-      line-height:1.7;
-    }
+<!-- EmailJS -->
+<script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+<script>
+(function(){
+  emailjs.init("pcFD3R0JWyAI8qMea");
+})();
+</script>
 
-    /* NAVBAR */
-    nav {
-      position: sticky;
-      top: 0;
-      background: rgba(0, 0, 0, 0.95);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 1rem 2rem;
-      z-index: 1000;
-    }
-    nav .logo { font-weight: bold; font-size: 1.5rem; }
-    nav ul { display: flex; list-style:none; gap: 1.5rem; }
-    nav ul li a { color: #e5e5e5; text-decoration: none; }
-    nav ul li a:hover { color: #ffffff; }
+<style>
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',sans-serif;
+}
+html{scroll-behavior:smooth;}
+body{
+  background:linear-gradient(135deg,#0b0014,#140021,#1b002e);
+  color:#e5e7eb;
+}
 
-    @media(max-width:768px){
-      nav ul { display: none; }
-      nav .contact-mobile { display:block; color:#e5e5e5; text-decoration:none; }
-    }
-    @media(min-width:769px){
-      nav .contact-mobile { display:none; }
-    }
+/* NAVBAR */
+nav{
+  position:sticky;
+  top:0;
+  z-index:1000;
+  background:rgba(15,0,30,0.9);
+  backdrop-filter:blur(12px);
+}
+.nav-inner{
+  max-width:1200px;
+  margin:auto;
+  padding:1rem 2rem;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+.nav-links a{
+  margin-left:1.5rem;
+  text-decoration:none;
+  color:#c084fc;
+  font-weight:500;
+}
+.nav-links a:hover{color:#f472b6;}
 
-    /* HERO */
-    header {
-      min-height:70vh;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      text-align:center;
-      padding:1.5rem 2rem;
-    }
-    header img {
-      width:150px;
-      height:150px;
-      border-radius:50%;
-      margin-bottom:1rem;
-      object-fit:cover;
-      border:3px solid #ffffff;
-    }
-    header h1 { font-size:3rem; margin-bottom:0.8rem; }
-    header span { color:#cccccc; }
-    header p { max-width:600px; color:#aaaaaa; }
+@media(max-width:768px){
+  .nav-links a:not(:last-child){display:none;}
+}
 
-    section { max-width:1000px; margin:auto; padding:2rem; }
-    h2 { text-align:center; font-size:2.2rem; margin-bottom:1rem; }
+/* SECTIONS */
+section{
+  max-width:1100px;
+  margin:auto;
+  padding:3rem 2rem;
+}
+h2{
+  color:#c084fc;
+  margin-bottom:1.5rem;
+  font-size:2rem;
+}
 
-    .card {
-      background: rgba(30,30,30,0.95);
-      padding:1.5rem;
-      border-radius:18px;
-      margin-bottom:1.5rem;
-    }
+/* HERO */
+header{
+  text-align:center;
+  padding:3.5rem 2rem 2rem;
+}
+header img{
+  max-width:220px;
+  border-radius:18px;
+  margin-bottom:1.5rem;
+}
+header h1{
+  font-size:2.8rem;
+}
+header span{color:#f472b6;}
+header p{
+  max-width:600px;
+  margin:1rem auto;
+  color:#d1d5db;
+}
 
-    /* SKILLS */
-    .skills-grid {
-      display:grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap:1.5rem;
-    }
-    @media(max-width:768px){
-      .skills-grid { grid-template-columns:1fr; }
-    }
+/* CARDS */
+.card{
+  background:rgba(255,255,255,0.05);
+  padding:1.8rem;
+  border-radius:18px;
+  margin-bottom:1.5rem;
+}
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:1.5rem;
+}
 
-    .skill h4 {
-      margin-bottom:0.3rem;
-      font-weight:600;
-    }
+/* LISTS */
+ul{list-style:none;}
+li{padding:.4rem 0;color:#d1d5db;}
 
-    .progress {
-      background:#2a2a2a;
-      border-radius:10px;
-      overflow:hidden;
-      height:10px;
-      margin-bottom:0.8rem;
-    }
+/* CONTACT */
+form input,form textarea{
+  width:100%;
+  padding:.9rem;
+  margin-bottom:1rem;
+  border-radius:10px;
+  border:none;
+  background:#1f2937;
+  color:white;
+}
+form button{
+  width:100%;
+  padding:1rem;
+  border:none;
+  border-radius:999px;
+  background:#c084fc;
+  color:#020617;
+  font-weight:600;
+  cursor:pointer;
+}
+form button:hover{background:#f472b6;}
 
-    .progress span {
-      display:block;
-      height:100%;
-      background:#ffffff;
-      width:90%;
-    }
-
-    .services-grid {
-      display:grid;
-      grid-template-columns:repeat(3,1fr);
-      gap:1.5rem;
-    }
-    @media(max-width:1024px){.services-grid{grid-template-columns:repeat(2,1fr);}}
-    @media(max-width:600px){.services-grid{grid-template-columns:1fr;}}
-
-    ul { list-style:none; }
-    li { padding:0.6rem 0; border-bottom:1px solid #44444455; }
-    li:last-child { border-bottom:none; }
-
-    /* CONTACT BOX */
-    .contact-box {
-      background: rgba(20,20,20,0.95);
-      border: 1px solid #333;
-      border-radius: 16px;
-      padding: 2rem;
-      max-width: 600px;
-      margin: auto;
-    }
-
-    footer {
-      text-align:center;
-      padding:1.5rem;
-      color:#aaaaaa;
-      font-size:0.9rem;
-    }
-  </style>
+footer{
+  text-align:center;
+  padding:2rem;
+  color:#9ca3af;
+  font-size:.9rem;
+}
+</style>
 </head>
+
 <body>
 
 <nav>
-  <div class="logo">Power</div>
-  <ul>
-    <li><a href="#about">About</a></li>
-    <li><a href="#skills">Skills</a></li>
-    <li><a href="#communities">Communities</a></li>
-    <li><a href="#services">Services</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-  <a href="#contact" class="contact-mobile">Contact</a>
+  <div class="nav-inner">
+    <strong>Power</strong>
+    <div class="nav-links">
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#communities">Communities</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </div>
 </nav>
 
 <header>
-  <img src="https://cdn.discordapp.com/attachments/1405788974198296629/1466858220059361503/ca75ca1ab8d338ed603861f05833fa10.jpg?ex=697e45ac&is=697cf42c&hm=9e6b8294bdbf27f08917228ded876af4472d4813e090dbd6141e2deb9f21793f&">
-  <h1>Hello, I'm <span>Power</span></h1>
-  <p>Professional Discord Community Manager with over 3 years of experience.</p>
+  <img src="https://cdn.discordapp.com/attachments/1405788974198296629/1466858220059361503/ca75ca1ab8d338ed603861f05833fa10.jpg">
+  <h1>Hey, I'm <span>Power</span></h1>
+  <p>Professional Discord Community Manager helping communities grow, stay safe, and stay active.</p>
 </header>
 
 <section id="about">
-  <h2>About Me</h2>
-  <div class="card">
-    <p>I’m Power, a Discord community manager focused on building structured, engaging, and safe environments for creators and their audiences.</p>
-  </div>
+<h2>About Me</h2>
+<div class="card">
+I’m Power, a Discord community manager with over 3 years of hands-on experience managing, growing, and maintaining active servers for creators.
+</div>
 </section>
 
-<!-- SKILLS -->
 <section id="skills">
-  <h2>Skills & Experience</h2>
-  <p style="text-align:center;color:#aaaaaa;margin-bottom:1.5rem;">
-    3+ Years of hands-on Discord community management experience
-  </p>
+<h2>Skills & Experience</h2>
+<div class="grid">
+<div class="card">
+<strong>💬 Community Management</strong>
+<ul>
+<li>Large server handling</li>
+<li>Chat engagement</li>
+<li>Member support</li>
+</ul>
+</div>
 
-  <div class="skills-grid">
-    <div class="card skill">
-      <h4>💬 Community Management</h4>
-      <div class="progress"><span style="width:95%"></span></div>
-      <p>Managing large servers, keeping chats active, clean, and friendly.</p>
-    </div>
+<div class="card">
+<strong>🛡️ Moderation & Safety</strong>
+<ul>
+<li>Rule enforcement</li>
+<li>Raid control</li>
+<li>Spam prevention</li>
+</ul>
+</div>
 
-    <div class="card skill">
-      <h4>🛡️ Moderation & Safety</h4>
-      <div class="progress"><span style="width:95%"></span></div>
-      <p>Rule enforcement, conflict handling, raid protection.</p>
-    </div>
+<div class="card">
+<strong>📈 Community Growth</strong>
+<ul>
+<li>Organic growth</li>
+<li>Event strategies</li>
+<li>Retention systems</li>
+</ul>
+</div>
 
-    <div class="card skill">
-      <h4>📈 Community Growth</h4>
-      <div class="progress"><span style="width:90%"></span></div>
-      <p>Organic growth, engagement strategies, member retention.</p>
-    </div>
-
-    <div class="card skill">
-      <h4>🤖 Bot & Automation</h4>
-      <div class="progress"><span style="width:85%"></span></div>
-      <p>Moderation bots, custom commands, role systems.</p>
-    </div>
-
-    <div class="card skill">
-      <h4>🧠 Strategy & Planning</h4>
-      <div class="progress"><span style="width:90%"></span></div>
-      <p>Server structure, growth planning, improvement ideas.</p>
-    </div>
-
-    <div class="card skill">
-      <h4>🤝 Communication & Reliability</h4>
-      <div class="progress"><span style="width:95%"></span></div>
-      <p>Staff coordination, client communication, fast response mindset.</p>
-    </div>
-  </div>
+<div class="card">
+<strong>⏱️ Experience</strong>
+<ul>
+<li>3+ Years Experience</li>
+<li>Fast responses</li>
+<li>Reliable availability</li>
+</ul>
+</div>
+</div>
 </section>
 
 <section id="communities">
-  <h2>Communities</h2>
-  <div class="services-grid">
-    <div class="card"><h3>BasuPlays</h3><p>Members: 30k+</p></div>
-    <div class="card"><h3>Venxion</h3><p>Members: 11k+</p></div>
-    <div class="card"><h3>DcWolfPlayz</h3><p>Members: 3k+</p></div>
-  </div>
+<h2>Communities</h2>
+<div class="grid">
+<div class="card">
+<strong>BasuPlays</strong>
+<p>Gaming-focused community with strong engagement.</p>
+<p>Members: 30K+</p>
+</div>
+
+<div class="card">
+<strong>Venxion</strong>
+<p>Small YouTuber community with loyal members.</p>
+<p>Members: 11K+</p>
+</div>
+
+<div class="card">
+<strong>DcWolfPlayz</strong>
+<p>Big creator with an active Discord base.</p>
+<p>Members: 3K+</p>
+</div>
+</div>
 </section>
 
 <section id="services">
-  <h2>Services</h2>
-  <div class="services-grid">
-    <div class="card"><h3>Community Setup</h3></div>
-    <div class="card"><h3>Moderation</h3></div>
-    <div class="card"><h3>Growth Strategy</h3></div>
-  </div>
+<h2>Services</h2>
+<div class="grid">
+<div class="card">
+<strong>Community Setup</strong>
+<ul>
+<li>Roles & permissions</li>
+<li>Channel structure</li>
+<li>Server optimization</li>
+</ul>
+</div>
+
+<div class="card">
+<strong>Moderation</strong>
+<ul>
+<li>24/7 monitoring</li>
+<li>Conflict handling</li>
+<li>Safety systems</li>
+</ul>
+</div>
+
+<div class="card">
+<strong>Growth Strategy</strong>
+<ul>
+<li>Engagement planning</li>
+<li>Event hosting</li>
+<li>Community retention</li>
+</ul>
+</div>
+
+<div class="card">
+<strong>Consulting</strong>
+<ul>
+<li>Server audits</li>
+<li>Improvement plans</li>
+<li>Owner guidance</li>
+</ul>
+</div>
+</div>
 </section>
 
 <section id="contact">
-  <h2>Contact</h2>
-  <div class="contact-box">
-    <p><strong>Email:</strong> powerqrking2@gmail.com</p>
-    <p><strong>Discord Server:</strong> https://discord.gg/2ZzHtQEgqG</p>
-    <p><strong>Direct Contact:</strong> powergotfame_</p>
-  </div>
+<h2>Contact Me</h2>
+<div class="card">
+<form onsubmit="sendEmail(event)">
+<input type="text" name="name" placeholder="Your name" required>
+<input type="email" name="email" placeholder="Your email" required>
+<textarea name="message" placeholder="Tell me about your community..." required></textarea>
+<button type="submit">Send Message</button>
+</form>
+<p style="margin-top:1rem;">Discord: <strong>powergotfame_</strong></p>
+</div>
 </section>
 
-<footer>© 2026 Power. All rights reserved.</footer>
+<footer>
+© 2026 Power · Contact: powerqrking69@gmail.com
+</footer>
+
+<script>
+function sendEmail(e){
+  e.preventDefault();
+  emailjs.sendForm(
+    'service_x8k9abc',
+    'template_9gzt8yq',
+    e.target
+  ).then(
+    () => alert("Message sent successfully!"),
+    () => alert("Failed to send message.")
+  );
+}
+</script>
 
 </body>
 </html>
