--- a/index.html
+++ b/index.html
@@ -283,9 +283,7 @@ I’m Power, a Discord community manager with over 3 years of hands-on experienc
 </div>
 </section>
 
-<footer>
-© 2026 Power · Contact: powerqrking69@gmail.com
-</footer>
+<footer>© 2026 Power. All rights reserved.</footer>
 
 <script>
 function sendEmail(e){
