--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@ header{
   padding:3.2rem 2rem 2rem;
 }
 header img{
-  max-width:220px;
-  border-radius:18px;
+  width:200px;        /* circle size */
+  height:200px;
+  object-fit:cover;
+  border-radius:50%;  /* makes it circular */
   margin-bottom:1.5rem;
+  border: 3px solid #f5deb3; /* optional biscuit border */
 }
 header h1{
   font-size:2.8rem;
@@ -177,7 +180,7 @@ footer{
 </nav>
 
 <header>
-  <img src="https://cdn.discordapp.com/attachments/1405788974198296629/1466858220059361503/ca75ca1ab8d338ed603861f05833fa10.jpg?ex=697e45ac&is=697cf42c&hm=9e6b8294bdbf27f08917228ded876af4472d4813e090dbd6141e2deb9f21793f&">
+  <img src="https://cdn.discordapp.com/attachments/1405788974198296629/1466858220059361503/ca75ca1ab8d338ed603861f05833fa10.jpg">
   <h1>Hey, I'm <span>Power</span></h1>
   <p>Professional Discord Community Manager focused on growth, safety, and long-term engagement.</p>
 </header>
@@ -310,6 +313,7 @@ I’m Power, a Discord community manager with over 3 years of experience helping
 <footer>
     © 2026 Power. All rights reserved.
   </footer>
+
 
 <script>
 function sendEmail(e){
